# small-data

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  ruff.toml  settings.py
.github/workflows/: build.yml
pipelines/: __init__.py
pipelines/jobs/: __init__.py  example.py
