[project]
name = "small-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dagster>=1.10.6",
    "dagster-webserver>=1.10.6",
    "duckdb>=1.2.1",
    "polars>=1.25.2",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "ruff>=0.11.2",
    "streamlit>=1.43.2",
]
